--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate summary
-        run: ./generate_summary.sh
+        run: ./generatee_summary.sh
 
       - name: Generate ebook from markdown
         run: mdbook build
